# agentics-challenges

./: .gitignore  README.md
.github/workflows/: validate.yml
challenges/adaptive-impostor-search-frontier-cs-algorithmic-245/: README.md  agentics.challenge.json
challenges/adventure-rank-segmentation-frontier-cs-algorithmic-61/: README.md  agentics.challenge.json
challenges/advertisement-rectangle-placement-frontier-cs-algorithmic-147/: README.md  agentics.challenge.json
challenges/almost-monochromatic-cycle-frontier-cs-algorithmic-24/: README.md  agentics.challenge.json
challenges/average-permutation-frontier-cs-algorithmic-124/: README.md  agentics.challenge.json
challenges/balanced-graph-partition-frontier-cs-algorithmic-45/: README.md  agentics.challenge.json
challenges/ball-pillar-sorting-frontier-cs-algorithmic-62/: README.md  agentics.challenge.json
challenges/beacon-string-arrangement-frontier-cs-algorithmic-302/: README.md  agentics.challenge.json
challenges/big-integer-subset-sum-frontier-cs-algorithmic-179/: README.md  agentics.challenge.json
challenges/big-prize-index-frontier-cs-algorithmic-127/: README.md  agentics.challenge.json
challenges/bigger-sokoban-layout-frontier-cs-algorithmic-43/: README.md  agentics.challenge.json
challenges/binary-quadratic-assignment-frontier-cs-algorithmic-181/: README.md  agentics.challenge.json
challenges/imagenet-500k-frontier-cs-imagenet-500k/v1/resources/: pyproject.toml
migrations/: frontier-cs-faithfulness-qa-issues.md
scripts/: validate_challenges.py
test-solutions/: README.md
(+2379 files in other folders)
